--- a/css/wypr.css
+++ b/css/wypr.css
@@ -101,7 +101,7 @@ Yellow: rgba(252,177,51,1)    #FCB133
 #site-name,
 #site-name a {
   display: block;
-  height: 150px;
+  height: 175px;
   width: 775px;
   }
 
